liteOS-M/rust_kernel/kernel/test/src/include/los_task_h.rs

#[test]
fn bindgen_test_layout_tagTskInfo() {
    assert_eq!(
        ::std::mem::size_of::<tagTskInfo>(),
        120usize,
        concat!("Size of: ", stringify!(tagTskInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<tagTskInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(tagTskInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).acName as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(acName)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwTaskID as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwTaskID)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).usTaskStatus as *const _ as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(usTaskStatus)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).usTaskPrio as *const _ as usize },
        38usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(usTaskPrio)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).pTaskSem as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(pTaskSem)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).pTaskMux as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(pTaskMux)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwSemID as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwSemID)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwMuxID as *const _ as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwMuxID)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwEvent as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwEvent)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwEventMask as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwEventMask)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwStackSize as *const _ as usize },
        92usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwStackSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwTopOfStack as *const _ as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwTopOfStack)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwBottomOfStack as *const _ as usize },
        100usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwBottomOfStack)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwSP as *const _ as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwSP)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwCurrUsed as *const _ as usize },
        108usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwCurrUsed)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).uwPeakUsed as *const _ as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(uwPeakUsed)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInfo>())).bOvf as *const _ as usize },
        116usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInfo),
            "::",
            stringify!(bOvf)
        )
    );
}
#[doc = " @ingroup los_task"]
#[doc = " Task information structure."]
pub type TSK_INFO_S = tagTskInfo;
extern "C" {
    #[doc = " @ingroup los_task"]
    #[doc = " @brief Sleep the current task."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to delay the execution of the current task. The task is able to be scheduled"]
    #[doc = " after it is delayed for a specified number of Ticks."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The task fails to be delayed if it is being delayed during interrupt processing or it is locked.</li>"]
    #[doc = " <li>If 0 is passed in and the task scheduling is not locked,"]
    #[doc = " execute the next task in the queue of tasks with the priority of the current task."]
    #[doc = " If no ready task with the priority of the current task is available,"]
    #[doc = " the task scheduling will not occur, and the current task continues to be executed.</li>"]
    #[doc = " <li>The parameter passed in can not be equal to LOS_WAIT_FOREVER(0xFFFFFFFF)."]
    #[doc = " If that happens, the task will not sleep 0xFFFFFFFF milliseconds or sleep forever but sleep 0xFFFFFFFF Ticks.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param mSecs [IN] Type #UINT32 Number of MS for which the task is delayed."]
    #[doc = ""]
    #[doc = " @retval None"]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None"]
    pub fn LOS_Msleep(mSecs: UINT32);
}
extern "C" {
    #[doc = " @ingroup los_task"]
    #[doc = " @brief System kernel initialization function."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to start liteOS ."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>None.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param: None."]
    #[doc = ""]
    #[doc = " @retval #LOS_OK                                  0:LiteOS start success."]
    #[doc = ""]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_config.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_Start() -> UINT32;
}
extern "C" {
    pub fn LOS_Reboot();
}
extern "C" {
    pub fn LOS_Panic(fmt: *const CHAR, ...);
}
extern "C" {
    #[doc = " @ingroup los_task"]
    #[doc = " @brief System kernel initialization function."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to Initialize kernel ,configure all system modules."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>None.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param: None."]
    #[doc = ""]
    #[doc = " @retval #LOS_OK                                  0:System kernel initialization success."]
    #[doc = ""]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_config.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_KernelInit() -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Create a task and suspend."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to create a task and suspend it. This task will not be added to the queue of ready tasks before"]
    #[doc = " resume it."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>During task creation, the task control block and task stack of the task that is previously automatically deleted"]
    #[doc = " are deallocated.</li>"]
    #[doc = " <li>The task name is a pointer and is not allocated memory.</li>"]
    #[doc = " <li>If the size of the task stack of the task to be created is 0, configure #LOSCFG_BASE_CORE_TSK_DEFAULT_STACK_SIZE"]
    #[doc = " to specify the default task stack size. The stack size should be a reasonable value, if the size is too large, may"]
    #[doc = " cause memory exhaustion.</li>"]
    #[doc = " <li>The task stack size must be aligned on the boundary of 8 bytes. The size is determined by whether it is big"]
    #[doc = " enough to avoid task stack overflow.</li>"]
    #[doc = " <li>Less parameter value indicates higher task priority.</li>"]
    #[doc = " <li>The task name cannot be null.</li>"]
    #[doc = " <li>The pointer to the task executing function cannot be null.</li>"]
    #[doc = " <li>The two parameters of this interface is pointer, it should be a correct value, otherwise, the system may be"]
    #[doc = " abnormal.</li>"]
    #[doc = " <li>If user mode is enabled, user should input user stack pointer and size, the size must fit the stack pointer,"]
    #[doc = " uwStackSize remain as the kernel stack size.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  taskID        [OUT] Type  #UINT32 * Task ID."]
    #[doc = " @param  taskInitParam [IN]  Type  #TSK_INIT_PARAM_S * Parameter for task creation."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID        Invalid Task ID, param puwTaskID is NULL."]
    #[doc = " @retval #LOS_ERRNO_TSK_PTR_NULL          Param pstInitParam is NULL."]
    #[doc = " @retval #LOS_ERRNO_TSK_NAME_EMPTY        The task name is NULL."]
    #[doc = " @retval #LOS_ERRNO_TSK_ENTRY_NULL        The task entrance is NULL."]
    #[doc = " @retval #LOS_ERRNO_TSK_PRIOR_ERROR       Incorrect task priority."]
    #[doc = " @retval #LOS_ERRNO_TSK_STKSZ_TOO_LARGE   The task stack size is too large."]
    #[doc = " @retval #LOS_ERRNO_TSK_STKSZ_TOO_SMALL   The task stack size is too small."]
    #[doc = " @retval #LOS_ERRNO_TSK_TCB_UNAVAILABLE   No free task control block is available."]
    #[doc = " @retval #LOS_ERRNO_TSK_NO_MEMORY         Insufficient memory for task creation."]
    #[doc = " @retval #LOS_OK                          The task is successfully created."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " <ul><li>los_config.h: the header file that contains system configuration items.</li></ul>"]
    #[doc = " @see LOS_TaskDelete"]
    pub fn LOS_TaskCreateOnly(taskID: *mut UINT32, taskInitParam: *mut TSK_INIT_PARAM_S) -> UINT32;
}
